--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body{
 }
 h1{
   font-family: 'Montserrat-black', sans-serif;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
 }
 
@@ -19,14 +19,35 @@ h1{
 .container-fluid{
   padding: 3% 15%;
 }
-.dog-image{
-  transform: rotate(20deg);
-  height: 75%;
-  margin: 50px auto 0 auto;
+
+/* Title image */
+.title-image{
+  transform: rotate(25deg);
+  width: 60%;
 }
 
 /* Navigation bar */
 
+.navbar{
+   padding:0 0 4.5rem;
+}
 .navbar-brand{
   font-family: 'Ubuntu';
+  font-size: 2.5rem;
+  font-weight: bold;
+
+
+}
+.nav-item{
+  padding: 0 18px;
+}
+.nav-link{
+  font-size: 1.2rem;
+  font-family: 'Montserrat-Light';
+}
+
+/* Download Buttons */
+
+.download-button{
+  margin: 5% 3% 5% 0;
 }
