--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@ h1{
   font-size: 3.5rem;
   line-height: 1.5;
 }
+h3{
+  font-family: 'Montserrat-bold';
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+p{
+  color: #8f8f8f;
+}
 
 /***********************classes*************************/
 .container-fluid{
@@ -50,4 +58,19 @@ h1{
 
 .download-button{
   margin: 5% 3% 5% 0;
+}
+.features-button{
+  color: #ef8172;
+font-size: 4.5rem;
+margin-top: 10%;
+}
+.features-button:hover{
+  color: #ff4c68;
+}
+
+/* container features */
+
+.container-features{
+text-align: center;
+margin-top: 5%;
 }
