--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,12 @@ h3{
   font-weight: bold;
   font-size: 1.5rem;
 }
+h2{
+  font-family: 'Montserrat-bold';
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+
+}
 p{
   color: #8f8f8f;
 }
@@ -57,7 +63,18 @@ p{
   font-size: 1.2rem;
   font-family: 'Montserrat-Light';
 }
+.testimonials{
+  text-align: center;
+  background-color: #ff4c68;
+  color: white;
+  padding: 7% 15%;
 
+}
+.testimonials-image{
+  border-radius: 100%;
+  width: 20%;
+  margin: 20px;
+}
 /* Download Buttons */
 
 .download-button{
