--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,15 @@ p{
   text-align: center;
   background-color: #ff4c68;
   color: white;
-  padding: 7% 15%;
 
+
+}
+.carousel-item{
+  padding: 7% 15%;
 }
 .testimonials-image{
   border-radius: 100%;
-  width: 20%;
+  width: 15%;
   margin: 20px;
 }
 
