--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,11 @@ p{
   width: 15%;
   margin: 20px 20px 50px;
 }
+
+.pricing{
+  padding: 100px;
+  text-align: center;
+}
 /* Download Buttons */
 
 .download-button{
