--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,9 @@ p{
   padding: 100px;
   text-align: center;
 }
+.pricing-column{
+  padding: 3% 2%;
+}
 /* Download Buttons */
 
 .download-button{
