--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 
+
+
 /*************** IDS ***************/
 #title{
   background-color: #ff4c68;
@@ -126,4 +128,13 @@ margin-bottom: 1rem;
 .container-features{
 /* text-align: center;
 margin-top: 5%; */
+}
+@media (max-width: 1028px){
+  .title-image{
+    position: static;
+    transform: rotate(0);
+  }
+  #title{
+    text-align: center;
+  }
 }
