--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,24 @@ p{
   position: absolute;
   right: 30%;
 }
+.cta{
+  background-color: #ff4c68;
+  text-align: center;
+  color: #fff;
+  font-size: 50px;
+  padding: 5%;
+  font-family: 'Montserrat-Black';
+}
+.footer{
+  background-color: fff;
+  text-align: center;
+  padding: 8%;
 
+}
+.footer-icons{
+  margin: 1%;
+  margin-bottom: 2%;
+}
 /* Navigation bar */
 
 .navbar{
